...
                          child: const Text('Random'),
                        ),
                        const SizedBox(
                          width: 16,
                        ),
                        FilledButton(
                          key: const Key('search_button'),
                          onPressed: () =>
                              _searchTerm(context, _termSearchController.text),
                          child: const Text(
                            'Search',
                          ),
                        ),
...
